<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome_text">Welcome to The Cheezery!</string>
    <string name="welcome_description">Home of the most wonderful desserts ever seen (and tested) by the human being.</string>
    <string name="button_start">Get started!</string>

    <!-- fonts families -->
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>


    <!-- register fields -->

    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>

    <!-- end of fields -->


    <!-- menu -->
    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks </string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>
    <string name="title_activity_productos">ProductosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--End of menu strings-->


</resources>
