<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:scaleType="centerCrop"
        android:src="@drawable/the_cheezery" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@string/light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:layout_marginTop="10dp"
        android:paddingHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/light"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="@dimen/regText"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_marginTop="20dp"
        android:layout_width="219dp"
        android:layout_height="33dp"
        android:text="@string/button_start"
        android:textColor="@color/dusty_white"
        android:background="@drawable/round_button"
        android:layout_gravity="center" />

</LinearLayout>



