<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/tittle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="25dp">

        <Button
            android:text="@string/cold_drinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_cold_drinks"
            />

        <Button
            android:text="@string/hot_drinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_hot_drinks"
            />
        <Button
            android:text="@string/sweets"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_sweets"
            />

        <Button
            android:text="@string/salties"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_salties"
            />

        <Button
            android:text="@string/combos"
            android:textColor="@color/dusty_white"
            android:background="@drawable/third_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_combos"
            />

        <Button
            android:text="@string/customizable"
            android:textColor="@color/dusty_white"
            android:background="@drawable/third_gradient"
            android:paddingHorizontal="@dimen/menu_button_padding"
            android:layout_marginRight="@dimen/menu_button_magin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:paddingVertical="@dimen/menu_button_padding_v"
            android:layout_marginTop="4dp"
            android:id="@+id/button_custom"
            />


    </GridLayout>



</LinearLayout>